[tool.poetry]
name = "fastapi-auth-proxy"
version = "0.1.0"
description = ""
authors = ["Aynur Maksutov <maksutov_aynur@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
environs = "^9.5.0"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
